test/error/E46.chigfn
{
	"type": "function",
	"name": "helloworld",
	"data_inputs": [],
	"data_outputs": [],
	"exec_inputs": [""],
	"exec_outputs": [""],
	"nodes": {},
	"local_variables": {
		"local1": 32
	}
}


